kubernetes/apps/web-research/crawl4ai/app/ciliumnetworkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: crawl4ai
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: crawl4ai
  ingress:
  - fromEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: envoy-gateway-system
        gateway.envoyproxy.io/owning-gateway-name: crawl4ai
        gateway.envoyproxy.io/owning-gateway-namespace: web-research
    toPorts:
    - ports:
      - port: '11235'
        protocol: TCP
      - port: '9000'
        protocol: TCP
  - fromEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: gatus
        app.kubernetes.io/name: gatus
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: monitoring
        app.kubernetes.io/name: prometheus
    toPorts:
    - ports:
      - port: '9001'
        protocol: TCP
  egress:
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: kube-system
        k8s:k8s-app: kube-dns
    toPorts:
    - ports:
      - port: '53'
        protocol: UDP
      - port: '53'
        protocol: TCP
  - toCIDRSet:
    - cidr: 0.0.0.0/0
      except:
      - 0.0.0.0/8
      - 10.0.0.0/8
      - 100.64.0.0/10
      - 127.0.0.0/8
      - 169.254.0.0/16
      - 172.16.0.0/12
      - 192.0.0.0/24
      - 192.0.2.0/24
      - 192.88.99.0/24
      - 192.168.0.0/16
      - 198.18.0.0/15
      - 198.51.100.0/24
      - 203.0.113.0/24
      - 224.0.0.0/4
      - 240.0.0.0/4
    toPorts:
    - ports:
      - port: '443'
        protocol: TCP
  egressDeny:
  - toEntities:
    - host
    - remote-node
